--- a/base/Hauptseite/index.html
+++ b/base/Hauptseite/index.html
@@ -31,7 +31,8 @@
             <li><a id="dLoadLink">Downloads</a></li>
             <li><a id="devLogLink">DevLog</a></li>
             <li><a id="RandomChatLink">Random Chat</a></li>
-            <li><a id="WikiLink">Wiki</a></li>
+            <li><a href="../discord/index.html">Discord</a></li>
+
 
             <!-- <li><a id="cPlayGroundLink">Code-Playground</a></li>
             <li><a id="CSharpDokuLink">C#-Doku</a></li> -->
@@ -52,6 +53,7 @@
         <br />
     </section>
     <br />
+    
     <!--/Aufbau-Meldung-->
 
     <div>
